--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /* Variáveis globais             */
 /* ----------------------------- */
 :root {
-  --color-bg: #fefcff;
+  --color-bg: #140033;
   --color-white: #fff;
   --color-black: #000;
 
@@ -295,7 +295,7 @@ p {
   cursor: pointer;
   margin: 8px 0;
   user-select: none;
-  color: #140033;
+  color: #ffffff;
   font-size: 16px;
 }
 
@@ -1106,6 +1106,7 @@ p {
   gap: 0px 50px;
   max-width: 500px;
   margin: 0 auto;
+  color: #f0f0f0;
 }
 
 
